<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mangler</string><string name="channel_list">Channel Lists</string><string name="hostname">Hostname or IP Address</string><string name="password">Password</string><string name="phonetic">Phonetic</string><string name="port_number">Port Number</string><string name="save">Save</string><string name="server_edit">Edit Server</string>
    
    




<string name="server_list">Server List</string>
<string name="server_name">Server Name</string><string name="server_view">Server View</string><string name="settings">Settings</string><string name="user_list">User List</string><string name="user_name">User Name</string>










<string name="start_talk">Start Talking</string>
<string name="stop_talk">Stop Talking</string>
<string name="chat_view">Chat View</string>
<string name="push_to_talk">Push to Talk</string>
<string name="eula_title">Privacy Notice</string>
<string name="eula_accept">Accept</string>
<string name="eula_refuse">Refuse</string>
<string name="ptt_button_type">Push-to-Talk as Toggle</string>

<string name="force_8khz">Force 8kHz Transmit</string>
<string name="enable_tts">Enable Text-to-Speech</string><string name="enable_ttsChannel">TTS Channel Join/Leave</string><string name="enable_ttsLogin">TTS Login/Logout</string>
<string name="prevent_sleep">Prevent Sleep Mode</string>
<string name="fullscreen">Fullscreen Mode</string>
<string name="ttsPreferenceCategoryTitle">Text-To-Speech</string>
<string name="enable_ttsPage">TTS Pages</string>
<string name="custom_ptt">Custom Push-to-Talk</string>
<string name="mic_vol_set">Microphone Volume</string>
<string name="cancel">Cancel</string>
<string name="set_ptt">Set PTT Key</string>


<string name="pttPreferenceCategoryTitle">Push-To-Talk</string>
<string name="ptt_vibrate">Vibrate on PTT</string>
<string name="orientation">Display Orientation</string>
<string name="charset">Character Encoding</string>
</resources>
